Auto and manual offset added in html Several javascript fixes Reworked server code: now handles input better Remove points with invalid height (-100 or less) Updated openapi specification
